# traeger

./: CMakeLists.txt  Dockerfile.archlinux  Dockerfile.debian  Dockerfile.fedora  README.md
cmake/: dependencies.cmake  traeger-config.cmake.in
examples/: CMakeLists.txt  example-actor-definition.cpp  example-actor-local.cpp  example-actor-messaging.cpp  example-format-serialization.cpp  example-group.cpp  example-module-actor.cpp  example-module.cpp  example-socket-publisher.cpp  example-socket-replier.cpp  example-socket-requester.cpp  example-socket-subscriber.cpp  example-value-semantics.cpp
examples/go/: CMakeLists.txt
examples/go/example-actor-definition/: pkg.go
examples/go/example-actor-local/: CMakeLists.txt  main.go
examples/go/example-actor-messaging/: go.mod
examples/go/example-format-serialization/: CMakeLists.txt  main.go
examples/go/example-socket-publisher/: go.mod
examples/go/example-socket-replier/: CMakeLists.txt
examples/go/example-socket-requester/: go.mod  main.go
examples/go/example-value-semantics/: CMakeLists.txt
examples/python/: example-actor-definition.py  example-actor-messaging.py  example-format-serialization.py  example-socket-publisher.py  example-socket-replier.py
go/: README.md  actor.go  format.go  go.mod  module.go  socket.go  traeger_actor.go  traeger_format.go  traeger_value.go  value.go
go/examples/: CMakeLists.txt
go/examples/example-actor-definition/: go.mod  pkg.go
go/examples/example-actor-local/: CMakeLists.txt  go.mod
go/examples/example-actor-messaging/: pkg.go
go/examples/example-format-serialization/: go.mod  main.go
go/examples/example-module/: CMakeLists.txt  go.mod  main.go
go/examples/example-module-actor/: CMakeLists.txt  go.mod  main.go
go/examples/example-socket-publisher/: CMakeLists.txt  main.go
go/examples/example-socket-replier/: go.mod  main.go
go/examples/example-socket-requester/: CMakeLists.txt
go/examples/example-socket-subscriber/: CMakeLists.txt  go.mod  main.go
go/examples/example-value-semantics/: go.mod  main.go
patches/: 0001-Fix-missing-header-cstdint.patch  yaml-cpp-include-cstdint.diff
python/: CMakeLists.txt  README.md  pyproject.toml  setup.py
python/examples/: example-actor-local.py  example-module-actor.py  example-socket-publisher.py  example-socket-replier.py  example-socket-requester.py  example-socket-subscriber.py  example-value-semantics.py  example_actor_definition.py
python/traeger/: CMakeLists.txt  __init__.py  actor.cpp  format.cpp  module.cpp  socket.cpp  traeger.cpp  traeger.hpp  traeger_python.cpp  traeger_python_actor.cpp  traeger_python_format.cpp  traeger_python_socket.cpp  traeger_python_value.cpp  value.cpp
rust/: CMakeLists.txt  Cargo.toml  README.md  build.rs
rust/examples/: CMakeLists.txt  example-actor-local.rs  example-format-serialization.rs  example-module-actor.rs  example-module.rs  example-socket-publisher.rs  example-socket-replier.rs  example-socket-requester.rs  example-socket-subscriber.rs  example-value-semantics.rs
rust/examples/example_actor_definition/: mod.rs
rust/examples/example_actor_messaging/: mod.rs
rust/src/: actor.rs  c.rs  format.rs  lib.rs  module.rs  socket.rs  value.rs
traeger/: CMakeLists.txt
traeger/actor/: Actor.hpp  CMakeLists.txt  Group.cpp  Group.hpp  Mailbox.cpp  Mailbox.hpp  Promise.cpp  Promise.hpp  Queue.cpp  Queue.hpp  Result.cpp  Result.hpp  Scheduler.cpp  Scheduler.hpp  StatelessActor.cpp  StatelessActor.hpp  actor.h  traeger_actor.cpp  traeger_actor.hpp
traeger/format/: CMakeLists.txt  Format.cpp  Format.hpp  Format_json.cpp  Format_msgpack.cpp  Format_yaml.cpp  format.h  traeger_format.cpp  traeger_format.hpp
traeger/module/: CMakeLists.txt  Module.cpp  Module.hpp  module.h  traeger_module.cpp  traeger_module.hpp
traeger/socket/: CMakeLists.txt  Context.cpp  Context.hpp  Publisher.cpp  Publisher.hpp  Replier.cpp  Replier.hpp  Requester.cpp  Requester.hpp  Socket.cpp  Socket.hpp  Subscriber.cpp  Subscriber.hpp  socket.h  traeger_socket.cpp  traeger_socket.hpp
traeger/tests/: CMakeLists.txt  test-actor-define.cpp  test-context-publisher.cpp  test-context-replier.cpp  test-context-requester.cpp  test-context-subscriber.cpp  test-format-by_name.cpp  test-format-decode.cpp  test-format-encode.cpp  test-format-name.cpp  test-list-append.cpp  test-list-empty.cpp  test-list-find.cpp  test-list-get.cpp  test-list-iterator.cpp  test-list-resize.cpp  test-list-set.cpp  test-list-size.cpp  test-list-unpack.cpp  test-mailbox-send.cpp  test-map-empty.cpp  test-map-find.cpp  test-map-get.cpp  test-map-iterator.cpp  test-map-set.cpp  test-map-size.cpp  test-promise-fail.cpp  test-promise-promise.cpp  test-promise-result.cpp  test-promise-scheduler.cpp  test-promise-then.cpp  test-queue-close.cpp  test-queue-count.cpp  test-queue-pop.cpp  test-queue-push.cpp  test-result-equals.cpp  test-result-error.cpp  test-result-set.cpp  test-result-type.cpp  test-result-type_name.cpp  (+10 more)
traeger/value/: CMakeLists.txt  List.cpp  List.hpp  List_impl.hpp  Map.cpp  Map.hpp  Map_impl.hpp  Types.hpp  Value.cpp  Value.hpp  Value_impl.hpp  Variant.cpp  Variant.hpp  traeger_value.cpp  traeger_value.hpp  types.h  value.h
